--- a/index.html
+++ b/index.html
@@ -1,11 +1,68 @@
-<head><title></title></head>
-<body>
+<html lang="en-US"><head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+<title>Supermark</title>
+<meta property="og:title" content="TTM4115">
+<meta property="og:locale" content="en_US">
+<meta name="description" content="Design of Communicating Systems">
+<meta property="og:description" content="Design of Communicating Systems">
+
+
+<!--<link rel="stylesheet" type="text/css" href="style.css" />-->
+<link href="https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
+
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+<link rel="stylesheet" type="text/css" href="assets/style.css" />
+
+<!--<script src="jquery-1.10.1.min.js"></script>-->
+<script src="assets/script-aside.js"></script>
+</head>
+<body id="top">
+
+<nav class="navbar navbar-expand-md navbar-dark " style="background-color:#666666"#2B65EC"> <!-- fixed-top -->
+        <ul class="nav nav-pills">
+<li class="nav-item"><a class="nav-link" href="index.html" style="font-weight: bold")>Supermark</a></li>
+
+<li class="nav-item"><a class="nav-link" href="installation.html">Installation</a></li>
+<li class="nav-item"><a class="nav-link" href="usage.html">Usage</a></li>
+<li class="nav-item"><a class="nav-link" href="writing.html">Writing</a></li>
+<li class="nav-item"><a class="nav-link" href="development.html">Development</a></li>
+<!--
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Teknostart</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="day1.html">Dag 1: Raspberry Pi</a>
+      <a class="dropdown-item" href="day2.html">Dag 2: Linux</a>
+      <a class="dropdown-item" href="day3.html">Dag 3: IP og HTML</a>
+      <a class="dropdown-item" href="day4.html">Dag 4: Webserver 1</a>
+      <a class="dropdown-item" href="day5.html">Dag 5: Webserver 2</a>
+    </div>
+  </li>-->
+</ul>
+
+<div class="navbar-nav flex-row ml-md-auto d-none d-md-flex"></div>
+    </nav>
+
+
 <div class="page">
     </section>
     <section class="content">
-<span name="28ee30"></span><aside name="28ee30"><p>rmark</p>
-</aside>
+<h1 id="supermark">Supermark</h1>
+
     </section>
 </div>
+
+
+<footer></footer>
 </body>
 </html>
